window: keep main page on narrow transition
If we don't have a node selected, then we want to keep the main page
visible. This should help launching on mobile devices.

--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -27,7 +27,8 @@
       </object>
     </child>
     <child>
-      <object class="AdwBreakpoint">
+      <object class="AdwBreakpoint" id="narrow_breakpoint">
+        <signal name="apply" handler="dspy_window_narrow_apply_cb" swapped="true"/>
         <condition>max-width: 500sp</condition>
         <setter object="overlay_split_view" property="collapsed">true</setter>
         <setter object="split_view" property="collapsed">true</setter>
