--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -114,7 +114,6 @@
         <property name="spacing">6</property>
         <child>
           <object class="GtkLabel">
-            <property name="hexpand">true</property>
             <property name="ellipsize">middle</property>
             <property name="xalign">0</property>
             <binding name="label">
@@ -129,7 +128,19 @@
         </child>
         <child>
           <object class="GtkImage">
+            <property name="icon-name">warning-outline-symbolic</property>
+            <binding name="visible">
+              <lookup name="has-error" type="DspyConnection">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+          </object>
+        </child>
+        <child>
+          <object class="GtkImage">
             <property name="icon-name">go-next-symbolic</property>
+            <property name="halign">end</property>
+            <property name="hexpand">true</property>
           </object>
         </child>
       </object>
