--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -1470,18 +1470,18 @@
                                   <object class="AdwPreferencesGroup">
                                     <property name="title" translatable="yes">Statistics</property>
                                     <child>
-                                      <object class="AdwActionRow">
+                                      <object class="AdwActionRow" id="dur_row">
+                                        <property name="title" translatable="yes">Duration</property>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="AdwActionRow" id="min_row">
                                         <property name="title" translatable="yes">Minimum Duration</property>
                                       </object>
                                     </child>
                                     <child>
-                                      <object class="AdwActionRow">
+                                      <object class="AdwActionRow" id="max_row">
                                         <property name="title" translatable="yes">Maximum Duration</property>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwActionRow">
-                                        <property name="title" translatable="yes">Average Duration</property>
                                       </object>
                                     </child>
                                   </object>
