--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -1467,8 +1467,9 @@
                                   </object>
                                 </child>
                                 <child>
-                                  <object class="AdwPreferencesGroup">
+                                  <object class="AdwPreferencesGroup" id="duration_group">
                                     <property name="title" translatable="yes">Statistics</property>
+                                    <property name="visible">false</property>
                                     <child>
                                       <object class="AdwActionRow" id="dur_row">
                                         <property name="title" translatable="yes">Duration</property>
