--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -1455,13 +1455,33 @@
                                   </object>
                                 </child>
                                 <child>
-                                  <object class="AdwPreferencesGroup">
+                                  <object class="AdwPreferencesGroup" id="result_group">
                                     <property name="title" translatable="yes">Result</property>
                                     <child>
-                                      <object class="GtkListBox">
+                                      <object class="GtkScrolledWindow" id="result_frame">
                                         <style>
-                                          <class name="boxed-list"/>
+                                          <class name="card"/>
                                         </style>
+                                        <property name="max-content-height">600</property>
+                                        <property name="propagate-natural-height">true</property>
+                                        <child>
+                                          <object class="GtkTextView" id="result_view">
+                                            <property name="editable">false</property>
+                                            <property name="top-margin">6</property>
+                                            <property name="bottom-margin">6</property>
+                                            <property name="left-margin">6</property>
+                                            <property name="right-margin">6</property>
+                                            <property name="monospace">true</property>
+                                            <property name="wrap-mode">char</property>
+                                            <property name="buffer">
+                                              <object class="GtkTextBuffer" id="result_buffer">
+                                              </object>
+                                            </property>
+                                            <style>
+                                              <class name="card"/>
+                                            </style>
+                                          </object>
+                                        </child>
                                       </object>
                                     </child>
                                   </object>
@@ -1473,16 +1493,19 @@
                                     <child>
                                       <object class="AdwActionRow" id="dur_row">
                                         <property name="title" translatable="yes">Duration</property>
+                                        <property name="subtitle-selectable">true</property>
                                       </object>
                                     </child>
                                     <child>
                                       <object class="AdwActionRow" id="min_row">
                                         <property name="title" translatable="yes">Minimum Duration</property>
+                                        <property name="subtitle-selectable">true</property>
                                       </object>
                                     </child>
                                     <child>
                                       <object class="AdwActionRow" id="max_row">
                                         <property name="title" translatable="yes">Maximum Duration</property>
+                                        <property name="subtitle-selectable">true</property>
                                       </object>
                                     </child>
                                   </object>
