window: add button to refresh object list
We could consider doing this in other places, but I think the object list
is really the only thing that would meaningfully change.

Fixes: #39

--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -342,6 +342,13 @@
                                         </binding>
                                       </object>
                                     </child>
+                                    <child type="start">
+                                      <object class="GtkButton">
+                                        <property name="icon-name">view-refresh-symbolic</property>
+                                        <property name="action-name">refresh-objects</property>
+                                        <property name="tooltip-text" translatable="yes">Refresh Objects</property>
+                                      </object>
+                                    </child>
                                     <child type="end">
                                       <object class="GtkWindowControls">
                                         <property name="side">end</property>
